<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/danhsachdonhang"
            android:id="@+id/nav_danhsachdonhang"
            />
        <item
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_lichsu"
            android:id="@+id/lichsugiaohang"
            />
        <item
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_thongtincanhan"
            android:id="@+id/thongtincanhan"
            />
        <item
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/doanhthu"
            android:id="@+id/doanhthu"
            />
        <item
            android:icon="@drawable/ic_baseline_autorenew_24"
            android:title="Đổi mật khẩu"
            android:id="@+id/doimatkhau"
            />
        <item
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="Quên mật khẩu"
            android:id="@+id/quenmatkhau"
            />
        <item
            android:icon="@drawable/ic_sharp_keyboard_return_24"
            android:title="Đăng xuất"
            android:id="@+id/dangxuat"
            />
    </group>
</menu>