<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/borderlinear"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-50dp"
        tools:layout_editor_absoluteY="142dp">

        <ImageView
            android:id="@+id/imageThoiTiet"
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/anhuser" />

        <LinearLayout
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/madh"
                android:textColor="#ED2A1C"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodienthoaicuahang"
                android:textColor="#000"
                android:textSize="17dp"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="5dp"
                />

            <TextView
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diachicuahang"
                android:textColor="#000"
                android:textSize="17dp" />

            <TextView
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diachinguoinhan"
                android:textColor="#000"
                android:textSize="17dp" />
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongdon"
                android:textColor="#000"
                android:textSize="23dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>