<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Thongtincanhan_Activity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/anhuser" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_camera"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="-39dp"
            />
        <EditText
            android:id="@+id/hovaten"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/hoten"
            android:background="@drawable/botron"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/sodienthoai"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/sdt"
            android:inputType="number"
            android:background="@drawable/botron"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/email"
            android:background="@drawable/botron"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/ngaysinh"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/ngaysinh"
            android:background="@drawable/botron"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/diachi"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/diachi"
            android:background="@drawable/botron"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/bienso"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/bienso"
            android:background="@drawable/botron"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <Button
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/btnsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:background="@drawable/botronbtn"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"

            />
    </LinearLayout>


</ScrollView>
</LinearLayout>