<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"

        app:cardCornerRadius="40dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#93242A">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:adjustViewBounds="true"
                android:background="@drawable/logo"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <EditText
                android:id="@+id/tendangnhap"
                style="@style/Edittext_v1"
                android:drawablePadding="10dp"
                android:hint="@string/tendangnhap" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/matkhau"
                style="@style/Edittext_v1"
                android:drawablePadding="10dp"
                android:hint="@string/matkhau"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtQuenMatKhau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="Quên mật khẩu"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/botronbtn"
            android:text="@string/dangnhap"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>