<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borderlinear"
    android:layout_margin="5dp"
    android:layout_marginTop="10dp"
    >
    <LinearLayout
        android:layout_width="429dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Trạng thái"
                android:textColor="#D5A926"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:text="30-1-2020"
                android:textColor="#D5A926"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-50dp"
            tools:layout_editor_absoluteY="142dp">

            <ImageView
                android:id="@+id/productimg"
                android:layout_width="80dp"
                android:layout_height="95dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/anhuser" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/madh"
                    android:textColor="#ED2A1C"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_store_24"
                    android:drawablePadding="5dp"
                    android:text="Tên cửa hàng"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
                    android:drawablePadding="5dp"
                    android:text="Tên mặt hàng"
                    android:textColor="#000"
                    android:textSize="20dp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:text="@string/diachicuahang"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:text="@string/diachinguoinhan"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/tongdon"
                android:textColor="#000"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>